# mili

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  less-watch-compiler.config.json  package-lock.json  package.json
migrations/: 20231203130611_init.sql
src/: error.rs  lib.rs  qrcode.rs
src/routes/: analytics.rs  frontend.rs  links.rs  mod.rs  router.rs
templates/: analytics.html  base.html  index.html  links.html  options.html  shorten_success.html  shortlink.html  styles.css  styles.less
