[package]
name = "mili"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mili"
path = "src/bin/shuttle.rs"
required-features = ["shuttle"]

[[bin]]
name = "standalone"
path = "src/bin/standalone-bin.rs"

[features]
default = []
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime", "dep:shuttle-shared-db"]

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["multipart", "macros"] }
image = "0.24.7"
nanoid = "0.4.0"
prqlx = "0.2.0"
qrcode-generator = "4.1.9"
qrcodegen = "1.8.0"
resvg = "0.36.0"
serde = { version = "1.0.193", features = ["derive"] }
shuttle-axum = { version = "0.35.0", optional = true }
shuttle-runtime = { version = "0.35.0", optional = true }
shuttle-shared-db = { version = "0.35.0", optional = true, features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tiny-skia = "0.11.3"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }
usvg = "0.36.0"
webp = "0.2.6"
